--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,14 @@ description = "Default template for PDM package"
 authors = [
     {name = "oddsummer56", email = "oddsummer56@gmail.com"},
 ]
-dependencies = []
+dependencies = [
+    "fastapi>=0.115.6",
+    "uvicorn>=0.32.1",
+    "pydantic>=2.10.3",
+    "pymongo>=4.9.2",
+    "motor>=3.6.0",
+    "python-dotenv>=1.0.1",
+]
 requires-python = "==3.11.*"
 readme = "README.md"
 license = {text = "MIT"}
