--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,12 @@ authors = [
 dependencies = [
     "fastapi>=0.115.6",
     "uvicorn>=0.32.1",
-    "python-dotenv>=1.0.1",
+    "pydantic>=2.10.3",
     "pymongo>=4.9.2",
     "motor>=3.6.0",
-    "pyjwt>=2.10.1",
-    "passlib>=1.7.4",
-    "python-jose>=3.3.0",
+    "python-dotenv>=1.0.1",
 ]
-requires-python = "==3.11.*"
+requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
 
