--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "pymongo>=4.9.2",
     "motor>=3.6.0",
     "python-dotenv>=1.0.1",
+    "passlib>=1.7.4",
     "python-jose>=3.3.0",
-    "pyjwt>=2.10.1",
+    "final-login @ file:///${PROJECT_ROOT}/"
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -22,3 +23,6 @@ license = {text = "MIT"}
 
 [tool.pdm]
 distribution = false
+
+[tool.pytest.ini_options]
+pythonpath = [".", "src"]
