--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "python-jose>=3.3.0",
     "pyjwt>=2.10.1",
+    "starlette>=0.41.3",
+    "itsdangerous>=2.2.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
