--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pandas>=2.2.3",
     "pyarrow>=18.1.0",
     "requests>=2.32.3",
+    "final-login @ file:///${PROJECT_ROOT}/",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
